# pd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES.md  build.properties  format-sources.sh
doc/: CMakeLists.txt  Doxyfile.in
include/pd/: Exception.hpp  read_csv.hpp
include/pd/core/frame/DataFrame/: DataFrame.hpp  DataFrameParameters.hpp  DataFrameStreamIo.hpp
include/pd/core/internal/: AllToNumberConvertor.hpp  Array.hpp  Index.hpp  Indexing.hpp  Utils.hpp  Value.hpp
include/pd/core/internal/base64/: Base64.hpp
include/pd/core/internal/httpreader/: Address.hpp  Connector.hpp  Error.hpp  Handler.hpp  HttpHandler.hpp  HttpMessage.hpp  HttpReader.hpp  HttpVersion.hpp  HttpWriter.hpp  HttpsHandler.hpp  Initializer.hpp  Poll.hpp  Socket.hpp  SslConnector.hpp  SslInitializer.hpp  SslStream.hpp  Stream.hpp  UriParser.hpp
include/pd/core/series/Series/: Series.hpp  SeriesStreamIo.hpp
samples/read_csv/: CMakeLists.txt  main.cpp
scripts/: build.sh  deploy.sh
src/: CMakeLists.txt
src/pd/: read_csv.cpp
src/pd/core/frame/DataFrame/: DataFrame.cpp  DataFrameStreamIo.cpp
src/pd/core/internal/base64/: Base64.cpp
src/pd/core/internal/httpreader/: Address.cpp  Connector.cpp  Error.cpp  HttpHandler.cpp  HttpMessage.cpp  HttpReader.cpp  HttpWriter.cpp  HttpsHandler.cpp  Initializer.cpp  Poll.cpp  Socket.cpp  SslConnector.cpp  SslInitializer.cpp  SslStream.cpp  Stream.cpp  UriParser.cpp
src/pd/core/series/Series/: Series.cpp  SeriesStreamIo.cpp
unit_tests/: CMakeLists.txt
unit_tests/include/: PdTest.hpp
unit_tests/src/: DataFrameTest.cpp  ReadCsvTest.cpp  SeriesTest.cpp  main.cpp
